--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,8 +30,7 @@ html {
   line-height: 1.15;
   /* 1 */
   -webkit-text-size-adjust: 100%;
-  /* 2 */
-}
+  /* 2 */ }
 
 /* Sections
    ========================================================================== */
@@ -39,15 +38,13 @@ html {
  * Remove the margin in all browsers.
  */
 body {
-  margin: 0;
-}
+  margin: 0; }
 
 /**
  * Render the `main` element consistently in IE.
  */
 main {
-  display: block;
-}
+  display: block; }
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
@@ -55,8 +52,7 @@ main {
  */
 h1 {
   font-size: 2em;
-  margin: 0.67em 0;
-}
+  margin: 0.67em 0; }
 
 /* Grouping content
    ========================================================================== */
@@ -70,8 +66,7 @@ hr {
   height: 0;
   /* 1 */
   overflow: visible;
-  /* 2 */
-}
+  /* 2 */ }
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -81,8 +76,7 @@ pre {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
-  /* 2 */
-}
+  /* 2 */ }
 
 /* Text-level semantics
    ========================================================================== */
@@ -90,8 +84,7 @@ pre {
  * Remove the gray background on active links in IE 10.
  */
 a {
-  background-color: transparent;
-}
+  background-color: transparent; }
 
 /**
  * 1. Remove the bottom border in Chrome 57-
@@ -103,16 +96,14 @@ abbr[title] {
   text-decoration: underline;
   /* 2 */
   text-decoration: underline dotted;
-  /* 2 */
-}
+  /* 2 */ }
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
 b,
 strong {
-  font-weight: bolder;
-}
+  font-weight: bolder; }
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -124,15 +115,13 @@ samp {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
-  /* 2 */
-}
+  /* 2 */ }
 
 /**
  * Add the correct font size in all browsers.
  */
 small {
-  font-size: 80%;
-}
+  font-size: 80%; }
 
 /**
  * Prevent `sub` and `sup` elements from affecting the line height in
@@ -143,16 +132,13 @@ sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
-  vertical-align: baseline;
-}
+  vertical-align: baseline; }
 
 sub {
-  bottom: -0.25em;
-}
+  bottom: -0.25em; }
 
 sup {
-  top: -0.5em;
-}
+  top: -0.5em; }
 
 /* Embedded content
    ========================================================================== */
@@ -160,8 +146,7 @@ sup {
  * Remove the border on images inside links in IE 10.
  */
 img {
-  border-style: none;
-}
+  border-style: none; }
 
 /* Forms
    ========================================================================== */
@@ -181,8 +166,7 @@ textarea {
   line-height: 1.15;
   /* 1 */
   margin: 0;
-  /* 2 */
-}
+  /* 2 */ }
 
 /**
  * Show the overflow in IE.
@@ -191,8 +175,7 @@ textarea {
 button,
 input {
   /* 1 */
-  overflow: visible;
-}
+  overflow: visible; }
 
 /**
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
@@ -201,46 +184,41 @@ input {
 button,
 select {
   /* 1 */
-  text-transform: none;
-}
+  text-transform: none; }
 
 /**
  * Correct the inability to style clickable types in iOS and Safari.
  */
 button,
-[type=button],
-[type=reset],
-[type=submit] {
-  -webkit-appearance: button;
-}
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button; }
 
 /**
  * Remove the inner border and padding in Firefox.
  */
 button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
-  padding: 0;
-}
+  padding: 0; }
 
 /**
  * Restore the focus styles unset by the previous rule.
  */
 button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText; }
 
 /**
  * Correct the padding in Firefox.
  */
 fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
+  padding: 0.35em 0.75em 0.625em; }
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
@@ -260,60 +238,53 @@ legend {
   padding: 0;
   /* 3 */
   white-space: normal;
-  /* 1 */
-}
+  /* 1 */ }
 
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
 progress {
-  vertical-align: baseline;
-}
+  vertical-align: baseline; }
 
 /**
  * Remove the default vertical scrollbar in IE 10+.
  */
 textarea {
-  overflow: auto;
-}
+  overflow: auto; }
 
 /**
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-[type=checkbox],
-[type=radio] {
+[type="checkbox"],
+[type="radio"] {
   box-sizing: border-box;
   /* 1 */
   padding: 0;
-  /* 2 */
-}
+  /* 2 */ }
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
-  height: auto;
-}
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto; }
 
 /**
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-[type=search] {
+[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
-  /* 2 */
-}
+  /* 2 */ }
 
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none; }
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
@@ -323,8 +294,7 @@ textarea {
   -webkit-appearance: button;
   /* 1 */
   font: inherit;
-  /* 2 */
-}
+  /* 2 */ }
 
 /* Interactive
    ========================================================================== */
@@ -332,15 +302,13 @@ textarea {
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
 details {
-  display: block;
-}
+  display: block; }
 
 /*
  * Add the correct display in all browsers.
  */
 summary {
-  display: list-item;
-}
+  display: list-item; }
 
 /* Misc
    ========================================================================== */
@@ -348,25 +316,21 @@ summary {
  * Add the correct display in IE 10+.
  */
 template {
-  display: none;
-}
+  display: none; }
 
 /**
  * Add the correct display in IE 10.
  */
 [hidden] {
-  display: none;
-}
+  display: none; }
 
 * {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 html,
 body {
   width: 100%;
-  overflow-x: hidden;
-}
+  overflow-x: hidden; }
 
 body {
   margin: 0;
@@ -374,53 +338,44 @@ body {
   font-weight: 400;
   line-height: 1.8;
   font-size: 15px;
-  -webkit-font-smoothing: antialiased;
-}
+  -webkit-font-smoothing: antialiased; }
 
 ul {
   list-style: none;
   padding: 0;
-  margin: 0;
-}
+  margin: 0; }
 
 /* ================================= 
   My Lib
 ==================================== */
 .ml--flex {
-  align-items: center;
-}
+  align-items: center; }
 
 /* ================================= 
   Header
 ==================================== */
 .l-header {
   width: 100%;
-  border-bottom: #dedede solid 4px;
-}
+  border-bottom: #dedede solid 4px; }
 
 /* ================================= 
   Site Logo
 ==================================== */
 .site-logo {
   width: 50px;
-  height: 50px;
-}
+  height: 50px; }
 
 /* ================================= 
   Hero
 ==================================== */
 .l-hero {
-  margin-bottom: 3rem;
-}
+  margin-bottom: 3rem; }
 
 .hero__copy {
-  margin: 1.25rem 0;
-}
-@media (min-width: 414px) {
-  .hero__copy {
-    margin: 1.5rem 0 2rem;
-  }
-}
+  margin: 1.25rem 0; }
+  @media (min-width: 414px) {
+    .hero__copy {
+      margin: 1.5rem 0 2rem; } }
 
 /* ================================= 
   Site Title
@@ -429,13 +384,10 @@ ul {
   font-size: 26px;
   text-align: center;
   line-height: 1.4;
-  margin: 1rem 0;
-}
-@media (min-width: 414px) {
-  .site-title {
-    margin: 1.5rem 0;
-  }
-}
+  margin: 1rem 0; }
+  @media (min-width: 414px) {
+    .site-title {
+      margin: 1.5rem 0; } }
 
 /* ================================= 
   Main
@@ -444,145 +396,115 @@ ul {
   footer
 ==================================== */
 .l-footer {
-  background-color: #f9f8f6;
-  margin-top: 1rem;
-}
+  background-color: #f9f8f6; }
 
 .footer {
   background-color: #f9f8f6;
-  margin-top: 1rem;
-}
-.footer__line {
-  border-bottom: #000 solid 1px;
-  margin: 1rem 0;
-}
-.footer__email, .footer__social {
-  margin: 3rem 0;
-}
+  margin-top: 1rem; }
+  .footer__line {
+    border-bottom: #000 solid 1px;
+    margin: 1rem 0; }
+  .footer-email, .footer-social, .footer-bottom {
+    padding: 2rem 0; }
 
 /* ================================= 
   Containers & Wrappers
 ==================================== */
 .site-container {
   width: 100%;
-  margin: 0 auto;
-}
+  margin: 0 auto; }
 
 .container {
-  padding: 0 1rem;
-}
+  padding: 0 1rem; }
 
 /* ================================= 
   Header Card
 ==================================== */
 .header-card--info {
-  margin-top: 0.5rem;
-  font-size: 12px;
-}
+  margin-top: .5rem;
+  font-size: 12px; }
 .header-card--icon {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   margin-top: -10px;
-  padding: 0 10px;
-}
-@media (min-width: 414px) {
-  .header-card--icon {
-    margin-top: 0.25rem;
-  }
-}
-@media (min-width: 768px) {
-  .header-card--icon {
-    margin: -1rem 1rem 0;
-  }
-}
+  padding: 0 10px; }
+  @media (min-width: 414px) {
+    .header-card--icon {
+      margin-top: -1rem;
+      margin-bottom: 1rem; } }
+  @media (min-width: 768px) {
+    .header-card--icon {
+      margin: -1rem 1rem 0; } }
 
 /* ================================= 
   Nav
 ==================================== */
 .nav {
-  margin-top: 0.5rem;
-}
-.nav-desk, .nav-mobile {
-  display: none;
-}
+  margin-top: 0.5rem; }
+  .nav-desk, .nav-mobile {
+    display: none; }
 
 /* ================================= 
   Nutri 
 ==================================== */
 .nutri-table__header {
-  border-bottom: 5px solid #dedede;
-}
+  border-bottom: 5px solid #dedede; }
 .nutri-table__row {
   border-bottom: 1px solid #dedede;
   padding: 0.5rem 0;
   display: grid;
-  grid-template-columns: 50% 1fr;
-}
+  grid-template-columns: 50% 1fr; }
 .nutri-table__span-l {
-  text-align: left;
-}
+  text-align: left; }
 .nutri-table__span-r {
-  text-align: right;
-}
+  text-align: right; }
 .nutri-table__span-sub {
-  margin-left: 2rem;
-}
+  margin-left: 2rem; }
 .nutri-table__footer {
-  margin-top: 1rem;
-}
-.nutri-table__footer__p {
-  margin: 0.25rem 0;
-  font-size: 13px;
-}
+  margin-top: 1rem; }
+  .nutri-table__footer__p {
+    margin: 0.25rem 0;
+    font-size: 13px; }
 
 /* ================================= 
   Select-list
 ==================================== */
 .select-list {
   background: url("../img/icons/arrow.png") no-repeat 95% 95%;
-  background-size: 25px;
-}
-.select-list__label {
-  display: block;
-  color: #929292;
-  font-size: 14px;
-}
-.select-list__input {
-  display: block;
-  font-size: 18px;
-  font-weight: 900;
-  width: 100%;
-}
+  background-size: 25px; }
+  .select-list__label {
+    display: block;
+    color: #929292;
+    font-size: 14px; }
+  .select-list__input {
+    display: block;
+    font-size: 18px;
+    font-weight: 900;
+    width: 100%; }
 
 /* ================================= 
   Rewards
 ==================================== */
-.rewards {
+.rewards--content {
   color: #fff;
-  background-color: #1f3933;
-}
+  background-color: #1f3933; }
 .rewards__img {
   background: #1f3933 url("../img/rewards-bg.jpg") no-repeat;
   background-size: 900px;
   background-position: 25% 5%;
   height: 525px;
-  width: 100%;
-}
+  width: 100%; }
 .rewards__link {
-  height: 225px;
-}
+  height: 225px; }
 .rewards__overlay {
   text-align: center;
-  padding-top: 200px;
-}
+  padding: 200px 1rem 0; }
 .rewards__title {
-  font-size: 28px;
-}
-.rewards__p {
-  margin-bottom: 3rem;
-}
+  font-size: 28px; }
+.rewards__copy {
+  margin-bottom: 3rem; }
 
 /* ================================= 
   Ul Module
@@ -590,118 +512,104 @@ ul {
 .ul {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   /* ================= 
     Ul--modifiers 
   ==================== */
   /* ================= 
     Ul--mobile
   ==================== */
-}
-.ul__link {
-  color: #000;
-  text-decoration: none;
-}
-.ul--center {
-  margin: 0 auto;
-  width: 60%;
-}
-.ul--mobile {
-  flex-direction: column;
-  max-width: 480px;
-  background-color: #1e1e1e;
-  padding: 1rem 0;
-}
-.ul--mobile__link, .ul--mobile__link:active {
-  color: #fff;
-}
-.ul--mobile__link {
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  display: block;
-  text-align: center;
-  text-transform: uppercase;
-}
-.ul--mobile__link:hover, .ul--mobile__link:active {
-  background-color: #ddd;
-  color: #000;
-}
-
-.social-list {
-  width: 50%;
-}
-.social-list__li {
-  height: 30px;
-  width: 30px;
-}
-
-.footer-list__li {
-  padding: 0.5rem 0;
-}
-.footer-list__span {
-  cursor: pointer;
-}
+ /* ================= 
+  Ul--social
+==================== */
+ /* ================= 
+  Ul--footer
+==================== */ }
+  .ul__link {
+    color: #000;
+    text-decoration: none; }
+  .ul--center {
+    margin: 0 auto;
+    width: 60%; }
+  .ul--mobile {
+    flex-direction: column;
+    max-width: 480px;
+    background-color: #1e1e1e;
+    padding: 1rem 0; }
+    .ul--mobile__link, .ul--mobile__link:active {
+      color: #fff; }
+    .ul--mobile__link {
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+      display: block;
+      text-align: center;
+      text-transform: uppercase; }
+      .ul--mobile__link:hover, .ul--mobile__link:active {
+        background-color: #ddd;
+        color: #000; }
+  .ul--social {
+    width: 55%; }
+    .ul--social__li {
+      height: 30px;
+      width: 30px; }
+  .ul--footer {
+    flex-direction: column;
+    align-items: flex-start; }
+    .ul--footer__li {
+      padding: 0.5rem 0; }
+    .ul--footer__span {
+      cursor: pointer; }
 
 /* ================================= 
   BTN
 ==================================== */
 .btn {
-  text-align: center;
-}
-.btn__link {
-  text-decoration: none;
-}
-.btn__label {
-  border: #006341 solid 2px;
-  border-radius: 5px;
-  padding: 0.75rem;
-  color: #000;
-}
-.btn__label--white {
-  color: #fff;
-  border: #fff solid 2px;
-}
+  text-align: center; }
+  .btn__link {
+    text-decoration: none; }
+  .btn__label {
+    border: #006341 solid 2px;
+    border-radius: 5px;
+    padding: 0.75rem;
+    color: #000; }
+    .btn__label--white {
+      color: #fff;
+      border: #fff solid 2px; }
 
 /* ================================= 
   Mobile Menu BTN
 ==================================== */
 .mob-menu-btn {
   width: 40px;
-  height: 40px;
-}
-.mob-menu-btn__bar {
-  display: block;
-  height: 3px;
-  width: 40px;
-  background-color: #006341;
-  margin: 8px 0;
-}
+  height: 40px; }
+  .mob-menu-btn__bar {
+    display: block;
+    height: 3px;
+    width: 40px;
+    background-color: #006341;
+    margin: 8px 0; }
 
 /* ================================= 
   Media
 ==================================== */
 .media {
-  line-height: 0;
-}
-.media__img {
-  height: 100%;
-  width: 100%;
-}
+  line-height: 0; }
+  .media__img {
+    height: 100%;
+    width: 100%; }
 
 /* ================================= 
   Card
 ==================================== */
 .card__title {
-  margin: 1.5rem 0 0;
-}
+  margin: 1.5rem 0 0; }
 .card__sub-title {
   margin: 0 0 1rem;
-  font-style: italic;
-}
+  font-style: italic; }
 
 .inner-card__copy {
-  font-size: 13px;
-}
+  font-size: 13px; }
 
 /* ================================= 
   Form
@@ -713,17 +621,13 @@ ul {
   padding: 0.25rem;
   width: 100%;
   margin: 0 0.75rem 0.5rem 0;
-  line-height: 1.8;
-}
-.form__input[value] {
-  color: #b3b3b3;
-}
+  line-height: 1.8; }
+  .form__input[value] {
+    color: #b3b3b3; }
 .form__email {
-  max-width: 290px;
-}
+  max-width: 290px; }
 .form__zip {
-  max-width: 100px;
-}
+  max-width: 100px; }
 .form__submit {
   background-color: #3d3935;
   color: #fff;
@@ -733,18 +637,15 @@ ul {
   width: 150px;
   font-size: 16px;
   margin-top: 0.5rem;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 /* ================================= 
   Btn State
 ==================================== */
 .btn__feat {
-  margin-top: 3rem;
-}
-.btn__feat-a {
-  color: #fff;
-}
+  margin-top: 3rem; }
+  .btn__feat-a {
+    color: #fff; }
 
 /* ================================= 
   ul State
