--- a/src/sass/4-module/_header-card.scss
+++ b/src/sass/4-module/_header-card.scss
@@ -17,7 +17,8 @@
     padding: 0 10px;
 
     @media (min-width: $break-s) {
-        margin-top: 0.25rem;
+        margin-top: -1rem;
+            margin-bottom: 1rem;
     }
 
     @media (min-width: $break-m) {
