--- a/src/sass/3-layout/_main.scss
+++ b/src/sass/3-layout/_main.scss
@@ -1,3 +1,9 @@
 /* ================================= 
   Main
 ==================================== */
+
+.l-main {
+    @media (min-width: $break-m) {
+        padding: 0 1rem;
+    }
+}
