--- a/src/sass/4-module/_4-module.scss
+++ b/src/sass/4-module/_4-module.scss
@@ -1,11 +1,16 @@
-@import "header-card";
 @import "nav";
-@import "nutri";
+@import "two-col-table";
 @import "select-list";
-@import "rewards";
+@import "site-logo";
 
-@import "ul";
 @import "btn";
-@import "media";
+@import "img";
 @import "card";
 @import "form";
+@import "mobile-menu";
+@import "utilities";
+@import "list";
+@import "copy";
+@import "site-title";
+@import "header-icons";
+@import "content";
