--- a/src/sass/3-layout/_footer.scss
+++ b/src/sass/3-layout/_footer.scss
@@ -8,17 +8,19 @@
 
 .footer {
     background-color: #f9f8f6;
-    margin-top: 1rem;  
-   
+    margin-top: 1rem;
+
     &__line {
         border-bottom: #000 solid 1px;
-        margin: 1rem 0;
+        margin: 0.25rem 0;
+    }
+
+    &-social {
+        padding: 2rem 0;
     }
 
     &-email,
-    &-social,
     &-bottom {
-        padding: 2rem 0;
+        padding: 1rem 0;
     }
-  
 }
