--- a/src/sass/4-module/_card.scss
+++ b/src/sass/4-module/_card.scss
@@ -2,19 +2,86 @@
   Card
 ==================================== */
 
-.card {
+.m-card {
+    /* ======================== 
+    Card--Elements
+    =========================== */
+
     &__title {
         margin: 1.5rem 0 0;
+
+        @media (min-width: $break-m) {
+            margin: 0;
+        }
     }
 
     &__sub-title {
         margin: 0 0 1rem;
         font-style: italic;
     }
-}
 
-.inner-card {
-    &__copy {
-        font-size: 13px;
+    &__header {
+        @media (min-width: $break-m) {
+            border-bottom: #dedede solid 1px;
+            margin: 1rem 0;
+        }
+    }
+
+    &__content {
+        &--50 {
+            @media (min-width: $break-m) {
+                width: 50%;
+                display: inline-block;
+            }
+        }
+
+        &--top-49 {
+            @media (min-width: $break-m) {
+                width: 49%;
+                display: inline-block;
+                padding-left: 2rem;
+                vertical-align: top;
+            }
+        }
+    }
+
+    /* ======================== 
+    Card--Modifiers
+    =========================== */
+
+    &--section {
+        @media (min-width: $break-m) {
+            margin-bottom: 2rem;
+        }
+    }
+
+    &--rewards {
+        color: #fff;
+        background-color: #1f3933;
+
+        &__content {
+            background: #1f3933 url("../img/rewards-bg.jpg") no-repeat;
+            background-size: 900px;
+            background-position: 25% 5%;
+            height: 525px;
+            width: 100%;
+        }
+
+        &__link {
+            height: 225px;
+        }
+
+        &__overlay {
+            text-align: center;
+            padding: 200px 1rem 0;
+        }
+
+        &__title {
+            font-size: 28px;
+        }
+
+        &__copy {
+            margin-bottom: 3rem;
+        }
     }
 }
