--- a/src/sass/4-module/_header-icons.scss
+++ b/src/sass/4-module/_header-icons.scss
@@ -1,34 +1,25 @@
 /* ================================= 
-  Header Card
+  Card-icons
 ==================================== */
-.header-card {
-  
-  &--info {
-    margin-top: .5rem;
-    font-size: 12px;
-  }
 
-  &--icon {
+.m-header-icons {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-top: -10px;
-    padding: 0 10px;
+    margin-top: -15px;
+    padding: 0 0.5rem;
+    grid-row-start: 2;
+    grid-column-start: 1;
+    grid-column-end: 13;
 
     @media (min-width: $break-s) {
-        margin-top: -1rem;
-            margin-bottom: 1rem;
+        margin: -1rem 0 1rem;
     }
 
     @media (min-width: $break-m) {
-        margin: -1rem 1rem 0;
+        grid-row-start: 1;
+        margin: 1.75rem 0rem 0;
+        width: 10%;
     }
-
-  }
 }
-
-
-
-
-
