--- a/src/sass/4-module/_nav.scss
+++ b/src/sass/4-module/_nav.scss
@@ -1,13 +1,33 @@
 /* ================================= 
-  Nav
+  nav module
 ==================================== */
 
-.nav {
+.m-nav {
     margin-top: 0.5rem;
+    grid-row-start: 3;
+    grid-column-start: 1;
+    grid-column-end: 13;
 
-    &-desk,
-    &-mobile {
+    @media (min-width: $break-m) {
+        margin-top: 1rem;
+        grid-row-start: 2;
+        grid-column-start: 3;
+        grid-column-end: 13;
+    }
+
+    &__desk,
+    &__mobile {
         display: none;
     }
 
+    &__desk {
+        @media (min-width: $break-m) {
+            display: block;
+            /* width: 90%;
+            padding: 0 2rem;
+            float: right;
+            margin-top: -2rem;*/
+            font-size: 18px;
+        }
+    }
 }
