--- a/src/sass/4-module/_two-col-table.scss
+++ b/src/sass/4-module/_two-col-table.scss
@@ -1,8 +1,8 @@
 /* ================================= 
-  Nutri 
+  Two Column Table
 ==================================== */
 
-.nutri-table {
+.two-col-table {
     &__header {
         border-bottom: 5px solid #dedede;
     }
@@ -15,6 +15,10 @@
     }
 
     &__span {
+        /* ========================= 
+        two-col-table__span--modifier
+        ============================ */
+
         &-l {
             text-align: left;
         }
