--- a/src/sass/3-layout/_l-hero.scss
+++ b/src/sass/3-layout/_l-hero.scss
@@ -1,9 +1,12 @@
 /* ================================= 
-  Main
+  Hero - Layout
 ==================================== */
 
-.l-main {
+.l-hero {
+    background-color: $alt-color;
+    height: 100vh;
+
     @media (min-width: $break-m) {
-        padding: 0 1rem;
+        height: auto;
     }
 }
