--- a/src/sass/4-module/_0-module.scss
+++ b/src/sass/4-module/_0-module.scss
@@ -1,16 +1,19 @@
+/* ================================= 
+  Modules
+==================================== */
+@import "utilities";
+@import "header-icons";
 @import "nav";
 @import "two-col-table";
 @import "select-list";
 @import "site-logo";
-
+@import "section";
 @import "btn";
 @import "img";
-@import "card";
 @import "form";
 @import "mobile-menu";
-@import "utilities";
 @import "list";
 @import "copy";
 @import "site-title";
-@import "header-icons";
 @import "content";
+@import "rewards";
