--- a/src/sass/4-module/_content.scss
+++ b/src/sass/4-module/_content.scss
@@ -2,10 +2,10 @@
   Content
 ==================================== */
 
-.m-content {
-    padding: 0 1rem 3rem;
+.content {
+    padding: 0 0.5rem;
 
-    &--tertiary {
-        color: $tertiary-color;
-    }
+    /* ======================== 
+    Content--Modifiers
+    =========================== */
 }
