--- a/src/sass/4-module/_form.scss
+++ b/src/sass/4-module/_form.scss
@@ -3,6 +3,14 @@
 ==================================== */
 
 .form {
+    @media (min-width: $break-m) {
+        width: 65%;
+    }
+
+    /* ======================== 
+    Form__Elements
+    =========================== */
+
     &__input {
         background-color: #fff;
         border: #d2d2d2 solid 1px;
@@ -10,7 +18,7 @@
         padding: 0.25rem;
         width: 100%;
         margin: 0 0.75rem 0.5rem 0;
-        line-height: 1.8;
+        line-height: 1.2;
 
         &[value] {
             color: #b3b3b3;
@@ -18,7 +26,7 @@
     }
 
     &__email {
-        max-width: 290px;
+        max-width: 220px;
     }
 
     &__zip {
@@ -35,5 +43,12 @@
         font-size: 16px;
         margin-top: 0.5rem;
         cursor: pointer;
+    }
+
+    &__link {
+        font-weight: 900;
+        text-decoration: none;
+        border-bottom: 1px dotted;
+        color: #000;
     }
 }
