--- a/src/sass/4-module/_select-list.scss
+++ b/src/sass/4-module/_select-list.scss
@@ -5,11 +5,13 @@
 .select-list {
     background: url("../img/icons/arrow.png") no-repeat 95% 95%;
     background-size: 25px;
+    margin-top: 1rem;
 
     &__label {
         display: block;
         color: #929292;
         font-size: 14px;
+        text-align: left;
     }
 
     &__input {
