--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
-@import '1-helpers/1-helpers';
-@import '2-base/2-base';
-@import '3-layout/3-layout';
-@import '4-module/4-module';
-@import '5-state/5-state';
+@import "1-helpers/0-helpers";
+@import "2-base/0-base";
+@import "3-layout/0-layout";
+@import "4-module/0-module";
+@import "5-state/0-state";
