--- a/src/sass/1-helpers/_variables.scss
+++ b/src/sass/1-helpers/_variables.scss
@@ -7,19 +7,22 @@
 ============================ */
 
 // Small devices
-$break-s: 414px;
+$break-s: 375px;
 
 // Medium devices
 $break-m: 768px;
 
 // Large devices
-$break-l: 992px;
+$break-l: 1024px;
 
 // Extra large devices
-$break-xl: 1200px;
+$break-xl: 1440px;
 
-// Retna large devices
-$break-ret: 1400px;
+// Retina devices
+$break-ret: 1920px;
+
+// Retina 2 devices
+$break-4k: 2560px;
 
 /* ========================= 
   Colors
