--- a/src/sass/2-base/_global.scss
+++ b/src/sass/2-base/_global.scss
@@ -1,30 +1,24 @@
-
-
 * {
     box-sizing: border-box;
 }
 
 html,
 body {
-  width: 100%;  
-  overflow-x: hidden;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 body {
     margin: 0;
-    font-family: SoDoSans, Helvetica Neue, Helvetica, Arial, sans-serif;
     font-weight: 400;
-    line-height: 1.8;
-    font-size: 15px;
+    line-height: 1.714;
+    font-size: 14px;
     -webkit-font-smoothing: antialiased;
 }
 
-ul {
+ul,
+ol {
     list-style: none;
     padding: 0;
     margin: 0;
 }
-
-p {
-}
-
