--- a/src/sass/4-module/_btn.scss
+++ b/src/sass/4-module/_btn.scss
@@ -1,8 +1,10 @@
 /* ================================= 
-  btn module
+  Btn
 ==================================== */
-.m-btn {
-    text-align: center;
+.btn {
+    /* ======================== 
+    Btn__Elements
+    =========================== */
 
     &__link {
         text-decoration: none;
@@ -11,7 +13,17 @@
     &__label {
         border: $tertiary-color solid 2px;
         border-radius: 5px;
-        padding: 0.75rem;
+        padding: 0.5rem 1.5rem;
         color: $tertiary-color;
+        font-weight: 900;
+        text-transform: uppercase;
+    }
+
+    /* ======================== 
+    Btn--Modifiers
+    =========================== */
+
+    &--bottom-space {
+        padding-bottom: 2rem;
     }
 }
