--- a/src/sass/4-module/_header-icons.scss
+++ b/src/sass/4-module/_header-icons.scss
@@ -1,25 +1,23 @@
 /* ================================= 
-  Card-icons
+  Header-icons
 ==================================== */
 
-.m-header-icons {
+.header-icons {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-top: -15px;
+    margin-top: 0px;
+    margin-bottom: 0.5rem;
     padding: 0 0.5rem;
     grid-row-start: 2;
     grid-column-start: 1;
     grid-column-end: 13;
 
-    @media (min-width: $break-s) {
-        margin: -1rem 0 1rem;
-    }
-
     @media (min-width: $break-m) {
-        grid-row-start: 1;
         margin: 1.75rem 0rem 0;
-        width: 10%;
+        width: 100%;
+        grid-row-start: 1;
+        grid-column-end: 2;
     }
 }
