--- a/src/sass/4-module/_list.scss
+++ b/src/sass/4-module/_list.scss
@@ -1,10 +1,14 @@
 /* ================================= 
-  list module 
+  List
 ==================================== */
 
-.m-list {
+.list {
     display: flex;
     justify-content: space-between;
+
+    /* ======================== 
+    List Element
+    =========================== */
 
     &__link {
         color: #000;
@@ -42,21 +46,12 @@
         }
     }
 
-    &--utilities {
-        margin: 0 auto;
-        width: 60%;
-        align-items: center;
-        font-size: 12px;
+    &--social {
+        width: 100%;
 
         @media (min-width: $break-m) {
-            margin: 0;
-            width: 100%;
-            padding-right: 2rem;
+            width: 70%;
         }
-    }
-
-    &--social {
-        width: 55%;
 
         &__li {
             height: 30px;
@@ -67,6 +62,12 @@
     &--footer {
         flex-direction: column;
         align-items: flex-start;
+        line-height: 2.75;
+
+        @media (min-width: $break-m) {
+            flex-direction: row;
+            width: 90%;
+        }
 
         &__li {
             padding: 0.5rem 0;
