--- a/src/sass/4-module/_mobile-menu.scss
+++ b/src/sass/4-module/_mobile-menu.scss
@@ -1,10 +1,10 @@
 /* ================================= 
-  mobile menu module
+  Mobile Menu
 ==================================== */
 
-.m-mobile-menu {
-    width: 42px;
-    height: 25px;
+.mobile-menu {
+    width: 34px;
+    height: 24px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -12,6 +12,10 @@
     @media (min-width: $break-m) {
         display: none;
     }
+
+    /* ======================== 
+    Mobile Menu__Elements
+    =========================== */
 
     &__bar {
         display: block;
