--- a/src/sass/4-module/_site-title.scss
+++ b/src/sass/4-module/_site-title.scss
@@ -3,16 +3,16 @@
 ==================================== */
 
 .site-title {
-    font-size: 30px;
+    font-size: 26px;
     text-align: center;
-    line-height: 1.4;
+    line-height: 1.3;
     margin: 0;
 
-    @media (min-width: $break-s) {
-        margin: 1.5rem 0;
+    @media (min-width: $break-m) {
+        text-align: left;
     }
 
-    @media (min-width: $break-m) {
+    @media (min-width: $break-l) {
         margin: 0;
         font-size: 22px;
     }
